# NovusNet

./: .gitignore  CMakeLists.txt  Documentation.md  LICENSE  README.md  gen.sh  wazxczfae
downloads/: test.txt
include/: nn.hpp
src/: client.cpp  nn.cpp  server.cpp
